--- a/_posts/2017-4-22-this.md
+++ b/_posts/2017-4-22-this.md
@@ -7,7 +7,7 @@ title: '使用 this 和词法作用域解决问题的方法'
 
 # 一、使用this
 
-1. 使用全局变量 global 作为 this
+{0}. 使用全局变量 global 作为 this
 
 ```javascript
 global.count = 0;
@@ -34,7 +34,7 @@ console.log(global.count);
 
 
 
-2. 另外创建对象 data 作为 this
+- 另外创建对象 data 作为 this
 
 ```javascript
 var data = {
@@ -51,9 +51,13 @@ function foo(num) {
 }
 
 for (vari = 0; i < 10; i++) {
+  
     if (i > 5) {
+      
         foo.call(data, i);
+      
     }
+  
 }
 
 console.log(data.count);
@@ -61,7 +65,7 @@ console.log(data.count);
 
 
 
-3. 将函数自身作为 this
+- 将函数自身作为 this
 
 ```javascript
 function foo(num) {
@@ -92,7 +96,7 @@ console.log(foo.count);
 
 # 二、使用词法作用域
 
-1. 另外创建对象
+{0}. 另外创建对象
 
 ```javascript
 var data = {
@@ -125,7 +129,7 @@ console.log(data.count);
 
 
 
-2. 另外创建变量
+{0}. 另外创建变量
 
 ```javascript
 var count = 0;
@@ -154,7 +158,7 @@ console.log(count);
 
 
 
-3. 将函数当做对象，添加属性
+{0}. 将函数当做对象，添加属性
 
 ```javascript
 function foo(num) {
