--- a/_posts/2017-4-22-this.md
+++ b/_posts/2017-4-22-this.md
@@ -3,11 +3,29 @@ layout: post
 title: '使用 this 和词法作用域解决问题的方法'
 ---
 
-无论用哪种方法，都记得先将数据初始化为 0
+针对 *You Don't Know Javascript* 里 this 的错误使用方法
+
+```javascript
+function foo(num) {
+    console.log("foo: " + num);
+    this.count++;
+}
+foo.count = 0;
+var i;
+for (i = 0; i < 10; i++) {
+    if (i > 5) {
+        foo(i);
+    }
+}
+console.log(foo.count); 
+```
+
+有多种解决办法，但无论用哪种方法，都记得先将数据初始化为 0。
 
 # 一、使用this
 
-{0}. 使用全局变量 global 作为 this
+- 使用全局变量 global 作为 this
+
 
 ```javascript
 global.count = 0;
